--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Mothers-in-law -- Fiction'
 - !lcc 'PS'
+- GITenberg
 title: That Mother-in-Law of Mine
 url: http://www.gutenberg.org/ebooks/30270
